--- a/converter/Load-calculator/styles.css
+++ b/converter/Load-calculator/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background: #1e1e1e; /* Dark AutoCAD-like background */
+    background: #1e1e1e;
     color: #fff;
     overflow: hidden;
 }
@@ -55,12 +55,12 @@ header {
 
 #canvas {
     position: absolute;
-    top: 30px; /* Space for ruler-x */
-    left: 30px; /* Space for ruler-y */
+    top: 30px;
+    left: 30px;
     width: calc(100% - 30px);
     height: calc(100% - 30px);
     background: #252525;
-    cursor: none; /* Hide default cursor */
+    cursor: none;
 }
 
 #grid {
@@ -113,7 +113,7 @@ header {
 
 .crosshair {
     position: absolute;
-    background: #00ff00; /* Green crosshair */
+    background: #00ff00;
     z-index: 10;
 }
 
