--- a/converter/steel-bars-calculator/styles.css
+++ b/converter/steel-bars-calculator/styles.css
@@ -51,7 +51,12 @@ input {
     width: 80px;
 }
 
-#plainResult, #ringResult, #giResult {
+select {
+    padding: 5px;
+    margin: 5px;
+}
+
+#plainResult, #ringResult, #squareResult, #giResult {
     margin-top: 15px;
     font-weight: bold;
 }
