--- a/converter/steel-bars-calculator/styles.css
+++ b/converter/steel-bars-calculator/styles.css
@@ -18,7 +18,7 @@ body {
     margin: 20px 0;
 }
 
-/* Header Styles */
+
 header {
     width: 100%;
     padding: 20px 0;
@@ -27,7 +27,7 @@ header {
 
 header .container {
 align: center;
-    margin: 0;
+    margin: auto;
 }
 
 header h1 {
