--- a/converter/steel-bars-calculator/styles.css
+++ b/converter/steel-bars-calculator/styles.css
@@ -20,30 +20,43 @@ body {
 
 
 header {
+  
+    padding: 10px auto;
+
+    flex: 1;
     width: 100%;
-    padding: 20px 0;
-    align: center;
+    display: flex;
+    justify-content: center;
 }
 
 header .container {
 align: center;
-    margin: auto;
+    margin:10px auto;
 }
 
 header h1 {
     color: #333;
-    margin: 0 0 10px;
+   
 text-align: center;
     font-size: 2em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+word-wrap: break-word; 
+    overflow-wrap: break-word; 
+   
+    margin: 10px auto;
 }
 
 header p {
     color: #555;
     font-size: 1em;
-text-align: center;
-    margin: 0;
+    text-align: center;
+    margin: auto;
+    word-wrap: break-word; 
+    overflow-wrap: break-word; 
+     
+    margin: 10px auto;
 }
+
 
 
 main {
@@ -114,7 +127,7 @@ h2 {
     max-width: 80%;
 }
 
-
+/* Form and Input Styles */
 .input-group {
     display: flex;
     flex-direction: column;
@@ -158,12 +171,12 @@ h2 {
 
 .unit {
     position: absolute;
-    bottom: 10px; 
-    left: 10px; 
+    bottom: 10px; /* Align with text baseline */
+    left: 10px; /* Default position, overridden by JS */
     color: #999;
     font-size: 0.9em;
     pointer-events: none;
-    display: none; 
+    display: none; /* Hidden by default, shown by JS */
 }
 
 /* Method Section (Aside) */
